# voting-site

./: Cargo.toml  voting-site.db
migrations/: 0001_setup.sql
src/: main.rs
templates/: button.html  foo.html  index.html  vote-saved.html
